# btpay

./: .gitignore  CNAME  LICENSE  Makefile  Procfile  README.md  app.json  app.py  config_default.py  pyproject.toml  railway.json  render.yaml  wsgi.py
.github/workflows/: deploy-render.yml
btpay/: __init__.py  _build_info.py  chrono.py  cli.py  coinmath.py  dictobj.py  generate_build_info.py  logging_config.py  misc.py  version.py
btpay/api/: __init__.py  routes.py  serializers.py  webhook_models.py  webhooks.py
btpay/auth/: __init__.py  decorators.py  models.py  sessions.py  totp.py  views.py
btpay/bitcoin/: __init__.py  address_list.py  descriptors.py  electrum.py  exchange.py  mempool_api.py  models.py  monitor.py  xpub.py
btpay/connectors/: __init__.py  btcpay.py  btcpay_monitor.py  evm_rpc.py  lnbits.py  lnbits_monitor.py  stablecoin_monitor.py  stablecoins.py  wire.py
btpay/demo/: __init__.py  seed.py  stubs.py
btpay/email/: __init__.py  service.py  templates.py
btpay/frontend/: __init__.py  checkout_views.py  context.py  dashboard.py  (+4 more)
deploy/: btpay.service  build.sh  gunicorn.conf.py  nginx.conf
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  PLAN-connectors.md
templates/: base.html
tests/: conftest.py  test_adversarial.py  test_api.py  test_auth.py  test_bitcoin.py  test_btcpay.py  test_chrono.py  test_connectors.py  test_invoicing.py  test_lnbits.py  test_orm.py  test_persistence_and_lifecycle.py  test_persistence_fuzz.py  test_phase7.py  test_recurring.py  test_refnums.py  test_security_fixes.py  test_tokens.py  test_user_stories.py
(+94 files in other folders)
